<resources>
    <string name="app_name">Phum HR</string>
    <!--General-->
    <string name="information">Information</string>
    <string name="error">Error</string>
    <string name="warning">Information</string>
    <string name="ok">OK</string>
    <string name="server_error">Sorry, an unexpected error occurred, please try again</string>
    <string name="cancel">Cancel</string>
    <string name="ignore">Ignore</string>
    <string name="version">Version</string>
    <string name="khmer">ភាសាខ្មែរ</string>
    <string name="english">English</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="language">Language</string>
    <string name="no_content">No Content</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>

    <!--Login-->
    <string name="remember_pass">Remember Password</string>
    <string name="password">Password</string>
    <string name="your_pass_here">Your Password Here…</string>
    <string name="username">Username</string>
    <string name="your_user_here">Your Username Here…</string>
    <string name="login">Login</string>

    <!--Home-->
    <string name="attendance">Attendance</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="leave">Leave</string>
    <string name="over_time">Over Time</string>
    <string name="announcement">Announcement</string>
    <string name="training">Training</string>
    <string name="payslip">PaySlip</string>
    <string name="expense">Expense</string>
    <string name="schedules">Schedules</string>

    <!--Profile-->
    <string name="title_pro">Profile Setting</string>

    <!--Notification-->
    <string name="notification">Notifications</string>
    <string name="detail">Detail</string>

    <!--Request_Leave-->
    <string name="my_request">My Requests</string>
    <string name="leave_detail">Leave Details</string>
    <string name="request">Request</string>
    <string name="approval">Approval</string>
    <string name="my_leave">My Leaves</string>
    <string name="request_leave">Request Leaves</string>

    <!--Language-->
    <string name="change_language">Do you want to change language</string>

    <!--Holiday-->
    <string name="holiday">Company Holiday</string>
    <string name="this_month">This Month</string>
    <string name="all_holiday">All Holiday</string>

    <!--Time Sheet-->
    <string name="time_sheet_title">Time Sheet</string>
    <string name="total_per_week">Total per week</string>
    <string name="new_time_entry">New Time Entry</string>


    <!--Attendance-->
    <string name="date">Date</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="working_hr">Working Hr\'s</string>
</resources>
