<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ActivityLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/iv_height_160"
        android:layout_height="@dimen/iv_height_75"
        android:src="@drawable/img_biz_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/iv_height_10"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/iv_height_15"
        android:padding="@dimen/iv_height_13"
        android:hint="@string/your_user_here"
        android:textSize="@dimen/text_size_normal"
        android:background="@drawable/shape_edt"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginBottom="@dimen/iv_height_10"
        app:layout_constraintBottom_toTopOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/iv_height_13"
        android:hint="@string/your_pass_here"
        android:textSize="@dimen/text_size_normal"
        android:background="@drawable/shape_edt"
        android:layout_marginRight="@dimen/iv_height_25"
        android:layout_marginLeft="@dimen/iv_height_25"
        android:layout_marginBottom="@dimen/iv_height_15"

        app:layout_constraintBottom_toTopOf="@+id/chk_remember" />

    <ImageView
        android:layout_width="@dimen/iv_height_40"
        android:layout_height="@dimen/iv_height_40"
        android:padding="@dimen/iv_height_10"
        android:src="@drawable/img_eye"
        android:tint="@color/grey_5"
        app:layout_constraintBottom_toBottomOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintTop_toTopOf="@+id/tv_password" />

    <CheckBox
        android:id="@+id/chk_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="@string/remember_pass"
        app:layout_constraintLeft_toLeftOf="@+id/tv_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_height_15"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:background="@drawable/shape_btn"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/chk_remember" />

</androidx.constraintlayout.widget.ConstraintLayout>