<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ActivityLanguage">

    <include
        android:id="@+id/include2"
        layout="@layout/top_home_activity" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/iv_height_20"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/rdg_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rdg_language" />

    <RadioGroup
        android:id="@+id/rdg_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_height_15"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <RadioButton
            android:id="@+id/rdb_khmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/iv_height_15"
            android:text="@string/khmer"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/rdb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/iv_height_15"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="normal" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>